# liaisons

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: changelog.yaml  release.yaml  unit-testing.yml
examples/: example.json
src/: clients.rs  configuration.rs  main.rs  models.rs  settings.rs  subcommand.rs  subcommands.rs
src/clients/: llm.rs  ollama.rs  repository.rs
src/clients/llm/: ollama.rs
src/clients/ollama/: client.rs  error.rs
src/clients/repository/: neo4j.rs
src/configuration/: cli.rs  command_lines.rs  logger.rs  settings.rs
src/models/: argument.rs  relation.rs
src/subcommand/: predict.rs  retrieve.rs
src/subcommands/: export.rs  predict.rs  retrieve.rs  summarize.rs
