[package]
name = "liaisons"
version = "0.0.1"
authors = ["Coding Kelps"]
autotests = false
categories = ["command-line-utilities", "science", "visualization", "simulation"]
description = "🌐 Enable graph visualization of argumentative discourses on social media."
edition = "2021"
exclude = []
homepage = "https://github.com/coding-kelps/liaisons"
keywords = ["argument-mining", "social-media"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/coding-kelps/liaisons"
rust-version = "1.83"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
config = "0.14.0"
env_logger = "0.11.3"
log = "0.4.21"
neo4rs = "0.7.1"
regex = "1.10.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
